changed size of header text to stop overflow

--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@ header {
   border: 4px solid #555555;
 }
 #vrlink{
-  font-size: 90px;
+  font-size: 70px;
 }
 .buttonlike:hover{
   background-color: white;
@@ -35,7 +35,7 @@ h2{
   font-style: italic;
 }
 h1{
-  font-size: 100px;
+  font-size: 70px;
 }
 .lead{
   font-size: 40px;
